fix animations on mobile menu

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -44,6 +44,19 @@ background-size: 100% 4px;
   transform: translate(-200px);
 }
 
+.fade-enter-active,
+.fade-leave-active {
+  transition: all 0.1s ease-out;
+}
+
+.fade-enter-from {
+  opacity: 0;
+}
+
+.fade-leave-to {
+  opacity: 0;
+}
+
 .animatedIcon:hover > svg {
     transform: translate(6px)
 }
